# lz4_flex_wasm_simd

./: .gitignore  ATTRIBUTION.md  BENCHMARK_RESULTS.md  CHANGELOG.md  Cargo.toml  PROVENANCE.toml  README.md  RELEASE_CHECKLIST.md  wasm-size-baseline.md
.github/workflows/: ci.yml
bench-data/: MANIFEST.sha256  json_50kb.json  text_50kb.txt
bench/lz4_flex_adapter/: Cargo.toml
bench/lz4_flex_adapter/src/: lib.rs
bench/lz_fear_adapter/: Cargo.toml
bench/lz_fear_adapter/src/: lib.rs
scripts/: benchmark_wasm.sh  prepare_bench_fixtures.sh
src/: fastcpy.rs  fastcpy_unsafe.rs  lib.rs  simd.rs  sink.rs  wasm_exports.rs
src/block/: compress.rs  decompress.rs  decompress_safe.rs  hashtable.rs  mod.rs
src/frame/: compress.rs  decompress.rs  header.rs  mod.rs
src/hash/: mod.rs  xxhash32.rs
tests/: block_parity.rs  frame_parity.rs  hash_parity.rs
