[package]
name = "lz4_flex_wasm_simd"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT"
description = "Opinionated LZ4 crate optimized for WASM SIMD and small binaries"
repository = "https://github.com/addmaple/lz4_flex_wasm_simd"
readme = "README.md"
include = ["src/**", "README.md", "LICENSE", "ATTRIBUTION.md", "PROVENANCE.toml"]

[features]
default = ["block"]
block = []
frame = ["std"]
std = []
safe-decode = []
safe-encode = []
checked-decode = []
nightly = []
wasm-simd = []
wasm-exports = []
decompress-prof = []

[dev-dependencies]
more-asserts = "0.3.1"
proptest = "1.0.0"
serde_json = "1.0.149"
lz4_flex = { version = "0.12.0", default-features = false, features = ["std", "frame", "safe-decode", "safe-encode", "checked-decode"] }
twox-hash = { version = "2.1.2", default-features = false, features = ["xxhash32"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
